[fix] align text inside solve btn

--- a/Client/styles/style.css
+++ b/Client/styles/style.css
@@ -33,8 +33,8 @@ h1 {
 
 }
 .solv, .unsolv {
-	width: 100px;
-	font-size: 14px;
+	width: 70px;
+	text-align: center;
 }
 
 .unsolv {
